nuxt-static/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nuxt-static-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nuxt-static-app
  template:
    metadata:
      labels:
        app: nuxt-static-app
    spec:
      containers:
        - name: nuxt-static-app
          image: tkordic/nuxt-static-app:latest
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
