nuxt-static/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nuxt-static-app-service
spec:
  selector:
    app: nuxt-static-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
